--- a/shop/templates/shop/about.html
+++ b/shop/templates/shop/about.html
@@ -1,6 +1,9 @@
 {% extends 'shop/basic.html' %}
 {% block title %} About Us{% endblock %}
 {% block css%}
+html{
+    margin-top:30px;
+}
 .btn-outline-success{
         color: #ffffff;
     border-color: #ffffff;
