--- a/shop/templates/shop/prod.html
+++ b/shop/templates/shop/prod.html
@@ -14,7 +14,7 @@ html{
     <div class="row">
     <div class="col-md-4">
     <div class="row">
-       <img src='https://s3.ap-south-1.amazonaws.com/arpan.mistry.8000/{{product.image}}' alt="/media/{{product.image}}" width="360px" height="385px">
+       <img src='https://s3.ap-south-1.amazonaws.com/arpan.mistry.8000/{{product.image}}'width="360px" height="385px">
     </div>
         </div>
        <div class="col-md-8">
